Add nav translations

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -1,3 +1,8 @@
 {
-    "title": "Publiq platform"
+    "title": "Publiq platform",
+    "nav": {
+        "integrations": "Mijn integraties",
+        "opportunities": "Mogelijkheden",
+        "support": "Ondersteuning"
+    }
 }
