Progress on header

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -1,5 +1,5 @@
 {
-    "title": "Publiq platform",
+    "title": "publiq platform",
     "nav": {
         "integrations": "Mijn integraties",
         "opportunities": "Mogelijkheden",
