--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -3,6 +3,7 @@
     "nav": {
         "integrations": "Mijn integraties",
         "opportunities": "Mogelijkheden",
-        "support": "Ondersteuning"
+        "support": "Ondersteuning",
+        "hello": "Hallo"
     }
 }
