--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -19,6 +19,9 @@
       "title": "Bereik een groter publiek",
       "intro": "publiq biedt een waaier van toepassingen om eigen activiteiten te promoten en agenda-informatie in je website of app te integreren.",
       "start_here": "Start hier"
+    },
+    "integration_types": {
+      "more_info": "Meer info"
     }
   }
 }
