Rename route create to new for consistency

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -1,7 +1,7 @@
 {
   "pages": {
     "/integrations": "/integraties",
-    "/integrations/create": "/integraties/nieuw",
+    "/integrations/new": "/integraties/nieuw",
     "/support": "/ondersteuning",
     "/subscriptions": "/abonnementen"
   },
