--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -51,5 +51,44 @@
       },
       "more_info": "Meer info"
     }
+  },
+  "support": {
+    "title": "Ondersteuning",
+    "description": "We ondersteunen je op verschillende manieren, zodat jij vlot een integratie met het publiq ecosysteem kan opzetten.",
+    "documentation": {
+      "title": "Documentatie",
+      "description": "Met onze uitgebreide documentatie zetten we je op weg bij elke integratie.",
+      "img_url": "#",
+      "action_title": "Naar de documentatie",
+      "action_url": "#"
+    },
+    "styleguide": {
+      "title": "Stijlgids",
+      "description": "Alle iconen, logo's en kleuren voor jou op een rijtje gezet. Een must wanneer je een UiT-agenda bouwt.",
+      "img_url": "#",
+      "action_title": "Naar de stijlgids",
+      "action_url": "#"
+    },
+    "statuspage": {
+      "title": "Statuspagina",
+      "description": "We bieden een overzicht van de status van de applicaties & services binnen het publiq platform. Je kan je inschrijven om op de hoogte te blijven van belangrijke updates.",
+      "img_url": "#",
+      "action_title": "Naar de statuspagina",
+      "action_url": "#"
+    },
+    "support_via_slack": {
+      "title": "Support via slack",
+      "description": "Heb je na het lezen van onze documentatie toch nog vragen? We horen ze graag. Via ons support kanaal op slack spelen we kort op de bal.",
+      "img_url": "#",
+      "action_title": "Naar het slack kanaal",
+      "action_url": "#"
+    },
+    "customized_support": {
+      "title": "Ondersteuning op maat",
+      "description": "Een organisatie met een hart voor cultuur en vrije tijd? Dan werken we graag een voorstel op maat uit!",
+      "img_url": "#",
+      "action_title": "Contacteer ons",
+      "action_url": "#"
+    }
   }
 }
