--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -52,6 +52,23 @@
       "more_info": "Meer info"
     }
   },
+  "integrations": {
+    "title": "Mijn integraties",
+    "add": "Integratie toevoegen",
+    "results_found_one": "{{count}} integratie gevonden",
+    "results_found_other": "{{count}} integraties gevonden",
+    "no_results_found": "Geen integraties gevonden",
+    "searching": "Zoeken ...",
+    "test": "Test",
+    "live": "Live",
+    "status": {
+      "not_active": "Niet actief"
+    },
+    "documentation": {
+      "title": "Documentatie",
+      "action_title": "Aan de slag met {{product}}"
+    }    
+  },
   "support": {
     "title": "Ondersteuning",
     "description": "We ondersteunen je op verschillende manieren, zodat jij vlot een integratie met het publiq ecosysteem kan opzetten.",
