Add dialog translation to nl

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -118,5 +118,9 @@
       "action_title": "Contacteer ons",
       "action_url": "#"
     }
+  },
+  "dialog": {
+    "confirm": "Doorgaan",
+    "cancel": "Annuleer"
   }
 }
