--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -66,7 +66,7 @@
     "contact": {
       "organisation": "Naam organisatie",
       "first_name": "Voornaam contactpersoon",
-      "last_name": "Naam contactpersoon",
+      "last_name": "Achternaam contactpersoon",
       "email": "E-mailadres"
     },
     "agree": "Ik ga akkoord met de",
