Add translations status

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -112,8 +112,14 @@
       "blocked": "Geblokeerd",
       "active": "Actief",
       "deleted": "Verwijderd",
-      "pending_approval_integration": "Niet actief",
-      "pending_approval_payment": "Niet actief"
+      "pending_approval_integration": "In Aanvraag",
+      "pending_approval_payment": "In Aanvraag",
+      "pending_approval_integration_description": "Voor de live-integratie is goedkeuring van publiq noodzakelijk. Alle informatie om vlot live te kunnen gaan vind je",
+      "pending_approval_payment_description": "Aan de slag met echte data en evenementen? Activeer je Search API integratie (vanaf 125 euro per jaar)",
+      "here": "hier.",
+      "activate": "Activeren"
+
+
     },
     "documentation": {
       "title": "Documentatie",
@@ -130,7 +136,7 @@
       "title": "Basisgegevens",
       "name": "Integratienaam",
       "description": "Beschrijving"
-    },
+    }, 
     "contact_info": {
       "title": "Contactgegevens",
       "employees": "Andere medewerkers",
