Add translations coupon

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -74,6 +74,8 @@
     },
     "agree": "Ik ga akkoord met de",
     "terms_of_use": "gebruiksvoorwaarden",
+    "coupon": "Ik heb een coupon",
+    "code": "Couponcode",
     "submit": "Integratie aanmaken",
     "back": "Terug naar integratieoverzicht",
     "pricing": {
