Change translations widgets description

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -45,7 +45,7 @@
       },
       "widgets": {
         "title": "Widgets",
-        "description": "Kant en klare HTML-modules die je in je website kan inpassen om een doorzoekbare lijst van evenementen weer te geven.",
+        "description": "Snel een agenda configureren en integreren met onze kant -en klare HTML-modules.",
         "features": [
           "Zelf of door publiq in te stellen",
           "Plug & play oplossing",
