Add title to QuestionDialog

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -130,6 +130,7 @@
       "action_title": "Aan de slag met {{product}}"
     },
     "dialog": {
+      "title": "Integratie verwijderen",
       "delete": "Wil je deze integratie echt verwijderen?"
     }
   },
