Fix translations billing tab

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -150,6 +150,7 @@
     },
     "billing_info": {
       "title": {
+        "billing": "Facturatiegegevens",
         "subscription": "Prijsplan",
         "organization": "Organisatiegegevens"
       },
