--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -183,7 +183,7 @@
       "prod": "productieomgeving",
       "login": "Login URL",
       "callback": "Callback URL's",
-      "add": "URL toevogen",
+      "add": "URL toevoegen",
       "new": "Nieuwe URL",
       "environment": "Omgeving",
       "logout": "Logout URL's",
