Add privacy statement and link

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -76,6 +76,8 @@
     },
     "agree": "Ik ga akkoord met de",
     "terms_of_use": "gebruiksvoorwaarden",
+    "privacy_statement": "privacyverklaring",
+    "privacy_link": "https://www.publiq.be/nl/privacy",
     "coupon": "Ik heb een coupon",
     "code": "Couponcode",
     "submit": "Integratie aanmaken",
