Add terms of use link

--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -76,6 +76,7 @@
     },
     "agree": "Ik ga akkoord met de",
     "terms_of_use": "gebruiksvoorwaarden",
+    "terms_of_use_link": "https://www.publiq.be/nl/gebruiksvoorwaarden",
     "privacy_statement": "privacyverklaring",
     "privacy_link": "https://www.publiq.be/nl/privacy",
     "coupon": "Ik heb een coupon",
