--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -262,7 +262,7 @@
     "cancel": "Annuleren",
     "close": "Sluiten",
     "invite_success": "Wij hebben een uitnodiging gestuurd naar {{email}}",
-    "invite_wrong": "Er is iets fout gegaan. Probeer het later opnieuw."
+    "invite_error": "Er is iets fout gegaan. Probeer het later opnieuw."
     
   },
   "tooltip": {
