Add translations for "Open Widget"

--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -111,6 +111,7 @@
     "searching": "Zoeken ...",
     "test": "Test",
     "live": "Live",
+    "open_widget": "Open widget",
     "products": {
       "search-api": "Search API",
       "entry-api": "Entry API",
