--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -118,7 +118,7 @@
       "widgets": "Widgets"
     },
     "status": {
-      "draft": "Voorlopige versie",
+      "draft": "Niet actief",
       "blocked": "Geblokeerd",
       "active": "Actief",
       "deleted": "Verwijderd",
