--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -194,7 +194,9 @@
       "delete": {
         "title": "URL verwijderen",
         "question": "Wil je deze URL echt verwijderen?"
-      }
+      },
+      "error":"Er is een fout opgetreden bij het indienen van het formulier. Controleer uw invoer en probeer het opnieuw.",
+      "success": "De wijzigingen zijn succesvol opgeslagen."
     },
     "delete_integration": {
       "title": "Verwijderen",
