--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -109,7 +109,7 @@
     "searching": "Zoeken ...",
     "test": "Test",
     "live": "Live",
-    "open_widget": "Open widget",
+    "open_widget": "Widgets bouwen",
     "products": {
       "search-api": "Search API",
       "entry-api": "Entry API",
