--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -109,7 +109,7 @@
     "searching": "Zoeken ...",
     "test": "Test",
     "live": "Live",
-    "open_widget": "Open widget",
+    "open_widget": "Widgets bouwen",
     "products": {
       "search-api": "Search API",
       "entry-api": "Entry API",
@@ -267,7 +267,6 @@
     "close": "Sluiten",
     "invite_success": "We hebben een uitnodiging verstuurd naar {{email}}",
     "invite_error": "Er is iets fout gegaan. Probeer het later opnieuw."
-    
   },
   "tooltip": {
     "copy": "Gekopieerd!"
