--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -127,6 +127,14 @@
       "here": "hier.",
       "activate": "Activeren"
     },
+    "activation_dialog": {
+      "title": "Activatie aanvragen",
+      "subscription_plan": "Prijsplan",
+      "price": "Totaalbedrag",
+      "contact": "E-mail boekhouding",
+      "contact_description": "Dit adres ontvangt de betalinginstructies, -herinneringen en de factuur.",
+      "coupon": "Coupon"
+    },
     "documentation": {
       "title": "Documentatie",
       "action_title": "Aan de slag met {{product}}",
