--- a/resources/translations/nl.json
+++ b/resources/translations/nl.json
@@ -125,7 +125,7 @@
       "pending_approval_integration_description": "Voor de live-integratie is goedkeuring van publiq noodzakelijk. Alle informatie om vlot live te kunnen gaan vind je",
       "pending_approval_payment_description": "Aan de slag met echte data en evenementen? Activeer je Search API integratie (vanaf 125 euro per jaar)",
       "here": "hier.",
-      "activate": "Activeren"
+      "activate": "Activatie aanvragen"
     },
     "activation_dialog": {
       "title": "Activatie aanvragen",
