--- a/resources/translations/en.json
+++ b/resources/translations/en.json
@@ -122,10 +122,10 @@
       "deleted": "Verwijderd",
       "pending_approval_integration": "In Aanvraag",
       "pending_approval_payment": "In Aanvraag",
-      "pending_approval_integration_description": "Voor de live-integratie is goedkeuring van publiq noodzakelijk. Alle informatie om vlot live te kunnen gaan vind je",
+      "pending_approval_integration_description": "Voor de live-integratie is goedkeuring van publiq noodzakelijk. Alle informatie om vlot live te kunnen gaan vind je <1>hier</1>.",
+      "before_going_live_link": "https://docs.publiq.be/docs/uitdatabank/entry-api/requirements-before-going-live",
       "pending_approval_payment_description": "Aan de slag met echte data en evenementen? Activeer je Search API integratie (vanaf 125 euro per jaar)",
-      "here": "hier.",
-      "activate": "Activeren"
+      "activate": "Activatie aanvragen"
     },
     "documentation": {
       "title": "Documentatie",
@@ -173,10 +173,8 @@
       "uitid_v2": "UITID v2",
       "test": "Test",
       "live": "Live",
-      "status_alert": "Voor de live-integratie van dit project is goedkeuring van publiq noodzakelijk. Alle informatie om vlot live te kunnen gaan vind je",
       "link": "here",
       "uitid_alert": "Voor deze integratie zijn nog geen UiTIDv2 credentials aangevraagd.",
-      "action_status": "Activatie aanvragen",
       "action_uitid": "UiTIDv2 credentials aanvragen"
     },
     "integration_settings": {
